# relentless-scene-graph

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  initsubmodules.bat  relentless-sg.sln
CodeGen/: Items.py  Versions.py  rsg_CodeGen.py
CodeGen/Geometry/: Mesh.py
CodeGen/Nodes/: NodeGeometry.py  NodeTransform.py
CodeGen/Scene/: Scene.py  SceneLayer.py
Src/: rsg.vcxproj  rsg.vcxproj.filters
Tests/: SystemTest.cpp
